src/main/java/com/dokia/SqlParser/converter/SqlParser.java
// Generated from SqlParser.g4 by ANTLR 4.5

	package com.dokia.SqlParser.converter;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPT_SEMI_COLON=1, COMMA=2, LPARAN=3, RPARAN=4, LSQUARE=5, RSQUARE=6, ARITH_OPER=7, 
		NEGTIVE=8, COMPARE_OPER=9, NOT=10, EQUALS=11, STAR=12, SEP=13, PAGE=14, 
		OFFSET=15, UNION=16, AS=17, AND=18, OR=19, LIKE=20, IN=21, SELECT=22, 
		FROM=23, WHERE=24, BETWEEN=25, ORDER=26, BREAK=27, GROUP=28, BY=29, DURATION=30, 
		PERIOD=31, LIMIT=32, ASC=33, DESC=34, ASCENDING=35, DESCENDING=36, AGGREOPR=37, 
		COUNT=38, LONG_SUM=39, DOUBLE_SUM=40, UNIQUE=41, HYPER_UNIQUE=42, ON=43, 
		JOIN=44, LEFT_JOIN=45, RIGHT_JOIN=46, HAVING=47, THEN=48, WHICH=49, CONTAINS=50, 
		SORT=51, HINT=52, INTERVAL=53, MIN=54, MAX=55, JAVASCRIPT=56, INCLUDE=57, 
		LONG=58, FLOAT=59, ID=60, SINGLE_QUOTE_STRING=61, WS=62, DATE_YEAR_MONTH_ONLY=63, 
		DATE=64, DATE_HOUR=65, DATE_HOUR_MIN=66, DATE_HOUR_MIN_SEC=67, DATE_HOUR_MIN_SEC_SUB=68, 
		DATE_HOUR_MIN_SEC_SUB_TZ=69, DATE_HOUR_MIN_SEC_SUB_UTC_TZ=70;
	public static final int
		RULE_program = 0, RULE_grandQuery = 1, RULE_queryStmnt = 2, RULE_whereClause = 3, 
		RULE_compareItem = 4, RULE_equalItem = 5, RULE_largerItem = 6, RULE_lessItem = 7;
	public static final String[] ruleNames = {
		"program", "grandQuery", "queryStmnt", "whereClause", "compareItem", "equalItem", 
		"largerItem", "lessItem"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "','", "'('", "')'", "'['", "']'", null, "'-'", null, null, 
		"'='", "'*'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OPT_SEMI_COLON", "COMMA", "LPARAN", "RPARAN", "LSQUARE", "RSQUARE", 
		"ARITH_OPER", "NEGTIVE", "COMPARE_OPER", "NOT", "EQUALS", "STAR", "SEP", 
		"PAGE", "OFFSET", "UNION", "AS", "AND", "OR", "LIKE", "IN", "SELECT", 
		"FROM", "WHERE", "BETWEEN", "ORDER", "BREAK", "GROUP", "BY", "DURATION", 
		"PERIOD", "LIMIT", "ASC", "DESC", "ASCENDING", "DESCENDING", "AGGREOPR", 
		"COUNT", "LONG_SUM", "DOUBLE_SUM", "UNIQUE", "HYPER_UNIQUE", "ON", "JOIN", 
		"LEFT_JOIN", "RIGHT_JOIN", "HAVING", "THEN", "WHICH", "CONTAINS", "SORT", 
		"HINT", "INTERVAL", "MIN", "MAX", "JAVASCRIPT", "INCLUDE", "LONG", "FLOAT", 
		"ID", "SINGLE_QUOTE_STRING", "WS", "DATE_YEAR_MONTH_ONLY", "DATE", "DATE_HOUR", 
		"DATE_HOUR_MIN", "DATE_HOUR_MIN_SEC", "DATE_HOUR_MIN_SEC_SUB", "DATE_HOUR_MIN_SEC_SUB_TZ", 
		"DATE_HOUR_MIN_SEC_SUB_UTC_TZ"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public GrandQueryContext grandQuery() {
			return getRuleContext(GrandQueryContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			grandQuery();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrandQueryContext extends ParserRuleContext {
		public QueryStmntContext queryStmnt() {
			return getRuleContext(QueryStmntContext.class,0);
		}
		public GrandQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grandQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterGrandQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitGrandQuery(this);
		}
	}

	public final GrandQueryContext grandQuery() throws RecognitionException {
		GrandQueryContext _localctx = new GrandQueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grandQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			queryStmnt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryStmntContext extends ParserRuleContext {
		public Token id;
		public Token table;
		public TerminalNode SELECT() { return getToken(SqlParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(SqlParser.FROM, 0); }
		public TerminalNode WHERE() { return getToken(SqlParser.WHERE, 0); }
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(SqlParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SqlParser.ID, i);
		}
		public QueryStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryStmnt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterQueryStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitQueryStmnt(this);
		}
	}

	public final QueryStmntContext queryStmnt() throws RecognitionException {
		QueryStmntContext _localctx = new QueryStmntContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_queryStmnt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			match(SELECT);
			setState(21);
			((QueryStmntContext)_localctx).id = match(ID);
			setState(22);
			match(FROM);
			setState(23);
			((QueryStmntContext)_localctx).table = match(ID);
			setState(24);
			match(WHERE);
			setState(25);
			whereClause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhereClauseContext extends ParserRuleContext {
		public Token join;
		public List<CompareItemContext> compareItem() {
			return getRuleContexts(CompareItemContext.class);
		}
		public CompareItemContext compareItem(int i) {
			return getRuleContext(CompareItemContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(SqlParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(SqlParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(SqlParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(SqlParser.OR, i);
		}
		public WhereClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterWhereClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitWhereClause(this);
		}
	}

	public final WhereClauseContext whereClause() throws RecognitionException {
		WhereClauseContext _localctx = new WhereClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_whereClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			compareItem();
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(28);
				((WhereClauseContext)_localctx).join = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
					((WhereClauseContext)_localctx).join = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(29);
				compareItem();
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareItemContext extends ParserRuleContext {
		public EqualItemContext equalItem() {
			return getRuleContext(EqualItemContext.class,0);
		}
		public LargerItemContext largerItem() {
			return getRuleContext(LargerItemContext.class,0);
		}
		public LessItemContext lessItem() {
			return getRuleContext(LessItemContext.class,0);
		}
		public CompareItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterCompareItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitCompareItem(this);
		}
	}

	public final CompareItemContext compareItem() throws RecognitionException {
		CompareItemContext _localctx = new CompareItemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_compareItem);
		try {
			setState(38);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				equalItem();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				largerItem();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(37);
				lessItem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualItemContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SqlParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SqlParser.ID, i);
		}
		public TerminalNode EQUALS() { return getToken(SqlParser.EQUALS, 0); }
		public TerminalNode LONG() { return getToken(SqlParser.LONG, 0); }
		public TerminalNode FLOAT() { return getToken(SqlParser.FLOAT, 0); }
		public TerminalNode SINGLE_QUOTE_STRING() { return getToken(SqlParser.SINGLE_QUOTE_STRING, 0); }
		public EqualItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterEqualItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitEqualItem(this);
		}
	}

	public final EqualItemContext equalItem() throws RecognitionException {
		EqualItemContext _localctx = new EqualItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_equalItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(ID);
			setState(41);
			match(EQUALS);
			setState(42);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LONG) | (1L << FLOAT) | (1L << ID) | (1L << SINGLE_QUOTE_STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LargerItemContext extends ParserRuleContext {
		public LargerItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_largerItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterLargerItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitLargerItem(this);
		}
	}

	public final LargerItemContext largerItem() throws RecognitionException {
		LargerItemContext _localctx = new LargerItemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_largerItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LessItemContext extends ParserRuleContext {
		public LessItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lessItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterLessItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitLessItem(this);
		}
	}

	public final LessItemContext lessItem() throws RecognitionException {
		LessItemContext _localctx = new LessItemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lessItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}